--- a/ICT4300_webapp_build/ICT4300_webapp.css
+++ b/ICT4300_webapp_build/ICT4300_webapp.css
@@ -2,7 +2,7 @@ div.background {
     
     /* width: 100%; */
     /* height: 100%; */
-    background: url('https://www.dc.com/sites/default/files/imce/2020/07-JUL/DCU_Rewards_Metropolis_wp_5f2b1a15dda776.09686626.jpg') no-repeat;
+    /* background: url('https://www.dc.com/sites/default/files/imce/2020/07-JUL/DCU_Rewards_Metropolis_wp_5f2b1a15dda776.09686626.jpg') no-repeat; */
     background-attachment: fixed;
     background-size: 100% 100%;
     background-position: center center ;
@@ -122,7 +122,15 @@ div.background {
     margin-right: 16px;
     font-size: 17px;
   }
-  
+  .topnav button[type=button] {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+    border: #111 solid 2px;
+  }
   /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
   @media screen and (max-width: 600px) {
     .topnav a, .topnav input[type=text] {
