really changing it up

--- a/ICT4300_webapp_build/ICT4300_webapp.css
+++ b/ICT4300_webapp_build/ICT4300_webapp.css
@@ -1,10 +1,26 @@
+#title{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 300%;
+    width: 100%;
+    font-weight: bolder;
+    text-align:center;
+    color: rgb(200, 0, 0);
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: rgb(205, 236, 255);
+
+    
+
+  
+  
+  
+  }
 div.background {
     
     /* width: 100%; */
     /* height: 100%; */
-    /* background: url('https://www.dc.com/sites/default/files/imce/2020/07-JUL/DCU_Rewards_Metropolis_wp_5f2b1a15dda776.09686626.jpg') no-repeat; */
+    background: url('https://www.dc.com/sites/default/files/imce/2020/07-JUL/DCU_Rewards_Metropolis_wp_5f2b1a15dda776.09686626.jpg') no-repeat;
     background-attachment: fixed;
-    background-size: 100% 100%;
+    background-size:  100% 100%;
     background-position: center center ;
     
     
@@ -13,7 +29,7 @@ div.background {
 /* The side navigation menu */
 .sidenav {
     height: 100%; /* 100% Full-height */
-    width: 250; /* 0 width - change this with JavaScript */
+    width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
@@ -48,14 +64,14 @@ div.background {
     margin-left: 50px;
     color: #818181;
 }
-.title{
+/* .title{
   height: 1px;
   width: 100%;
   margin-left: 250px;
   transition: .8s;
   text-align: center;
 
-}
+} */
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
   transition: margin-left .5s;
@@ -145,3 +161,4 @@ div.background {
       border: 1px solid #ccc;
     }
   }
+
