--- a/ICT4300_webapp_build/ICT4300_webapp.css
+++ b/ICT4300_webapp_build/ICT4300_webapp.css
@@ -14,18 +14,24 @@
   
   
   }
-div.background {
+/* div.background { */
     
     /* width: 100%; */
     /* height: 100%; */
-    background: url('https://www.dc.com/sites/default/files/imce/2020/07-JUL/DCU_Rewards_Metropolis_wp_5f2b1a15dda776.09686626.jpg') no-repeat;
+    /* background: url('https://www.dc.com/sites/default/files/imce/2020/07-JUL/DCU_Rewards_Metropolis_wp_5f2b1a15dda776.09686626.jpg') no-repeat;
     background-attachment: fixed;
     background-size:  100% 100%;
     background-position: center center ;
     
     
-    }
+    } */
 
+body { 
+  background-image: url('https://www.dc.com/sites/default/files/imce/2020/07-JUL/DCU_Rewards_Metropolis_wp_5f2b1a15dda776.09686626.jpg')
+  background-repeat: no-repeat;
+}
+
+    
 /* The side navigation menu */
 .sidenav {
     height: 100%; /* 100% Full-height */
